axum-macros/tests/debug_handler/fail/argument_not_extractor.stderr
error[E0277]: the trait bound `bool: FromRequestParts<()>` is not satisfied
 --> tests/debug_handler/fail/argument_not_extractor.rs:4:23
  |
4 | async fn handler(foo: bool) {}
  |                       ^^^^ the trait `FromRequestParts<()>` is not implemented for `bool`
  |
  = help: the following other types implement trait `FromRequestParts<S>`:
            <ConnectInfo<T> as FromRequestParts<S>>
            <ContentLengthLimit<T, N> as FromRequestParts<S>>
            <Extension<T> as FromRequestParts<S>>
            <HeaderMap as FromRequestParts<S>>
            <MatchedPath as FromRequestParts<S>>
            <Method as FromRequestParts<S>>
            <Option<T> as FromRequestParts<S>>
            <OriginalUri as FromRequestParts<S>>
          and 9 others
  = note: required because of the requirements on the impl of `FromRequest<(), Body, axum_core::extract::private::Mut>` for `bool`
  = note: required because of the requirements on the impl of `AssertFromRequest<(), Body, axum_core::extract::private::Mut>` for `bool`
note: required by a bound in `__axum_macros_check_handler_0_from_request_check`
 --> tests/debug_handler/fail/argument_not_extractor.rs:4:23
  |
4 | async fn handler(foo: bool) {}
  |                       ^^^^ required by this bound in `__axum_macros_check_handler_0_from_request_check`
